# spdlog_setup

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile-build  Dockerfile-clang  Dockerfile-gcc  Dockerfile-lint  LICENSE  README.md  appveyor.yml  codecov.yml  codefresh.yml  conanfile.txt  cpptoml_config.h.in  run-clang-format.sh
cmake/: cpptoml_config.h.in  spdlog_setup-config.cmake.in
config/: log_conf.pre.toml  log_conf.toml  log_conf_linux.toml  log_conf_override.toml  log_conf_win.toml
include/: spdlog_setup.h
include/spdlog_setup/: conf.h
include/spdlog_setup/details/: conf_impl.h  setup_error.h  template_impl.h
src/: spdlog_setup.h
src/unit_test/: conf.h  examples.h  loggers.cpp  loggers.h  others.cpp  sinks.cpp  sinks.h  thread_pool.cpp  thread_pool.h  unit_test.cpp
